--- a/UmbracoProjekt/UmbracoProjekt/UmbracoProjekt.csproj
+++ b/UmbracoProjekt/UmbracoProjekt/UmbracoProjekt.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Draw\Draw.csproj" />
+  </ItemGroup>
+
 </Project>
