Unit tests implemented

--- a/UmbracoProjekt/UnitTestProject/UnitTestProject.csproj
+++ b/UmbracoProjekt/UnitTestProject/UnitTestProject.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Draw\Draw.csproj" />
     <ProjectReference Include="..\UmbracoProjekt\UmbracoProjekt.csproj" />
   </ItemGroup>
 
